add login page layout without adaptive

--- a/src/assets/scss/global.scss
+++ b/src/assets/scss/global.scss
@@ -64,6 +64,10 @@ button {
     background: inherit;
     border: inherit;
     color: inherit;
+    font-size: inherit;
+    font-family: inherit;
+    font-weight: inherit;
+    cursor: pointer;
 }
 
 a {
