--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -8,3 +8,4 @@
 @import './components/home/promo';
 @import './components/home/about';
 @import './components/home/offer';
+@import './components/login/login';
