--- a/src/assets/scss/partials/_header.scss
+++ b/src/assets/scss/partials/_header.scss
@@ -10,6 +10,7 @@
     gap: 2rem;
     transition: all 0.4s ease-in-out;
     z-index: 100;
+    display: none;
 
     &.header_sticky,
     &.mobile {
