--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -9,3 +9,8 @@
 @import './components/home/about';
 @import './components/home/offer';
 @import './components/login/login';
+@import './components/catalog/card-list';
+@import './components/product/product-slider';
+@import './components/product/product-params';
+@import './components/product/product-description';
+@import './components/product/product-recommendations';
