--- a/src/assets/scss/partials/_header.scss
+++ b/src/assets/scss/partials/_header.scss
@@ -1,10 +1,13 @@
 .header {
-    position: fixed;
+    //position: fixed;
+    position: relative;
+    background-color: $grey;
+    color: black;
     top: 0;
     left: 0;
     padding: 2rem 0 1.4rem;
     width: 100%;
-    color: $white;
+    //color: $white;
     display: flex;
     flex-direction: column;
     gap: 2rem;
