--- a/src/assets/scss/components/product/_product-slider.scss
+++ b/src/assets/scss/components/product/_product-slider.scss
@@ -12,6 +12,7 @@
 
             &__slide {
                 height: 100%;
+                text-align: center;
     
                 &-img {
                     height: 100%;
