--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -9,6 +9,7 @@
 @import './components/home/about';
 @import './components/home/offer';
 @import './components/login/login';
+@import './components/catalog/panel';
 @import './components/catalog/card-list';
 @import './components/product/product-slider';
 @import './components/product/product-params';
