--- a/src/assets/scss/partials/_header.scss
+++ b/src/assets/scss/partials/_header.scss
@@ -37,6 +37,7 @@
         position: sticky;
         background-color: $white;
         color: $black;
+        border-bottom: 1px solid $grey;
     }
 
     &.mobile &__menu {
