add account page layout

--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -15,3 +15,7 @@
 @import './components/product/product-params';
 @import './components/product/product-description';
 @import './components/product/product-recommendations';
+@import './components/account/menu';
+@import './components/account/tabs/_recap';
+@import './components/account/tabs/_wishlist';
+@import './components/account/tabs/_orders';
