--- a/src/assets/scss/partials/_header.scss
+++ b/src/assets/scss/partials/_header.scss
@@ -269,6 +269,7 @@
         align-items: center;
         justify-content: center;
         transition: all 0.3s ease-in-out;
+        width: fit-content;
 
         &:hover {
             transform: scale(1.1);
