add account page without adaptive

--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -19,3 +19,4 @@
 @import './components/account/tabs/_recap';
 @import './components/account/tabs/_wishlist';
 @import './components/account/tabs/_orders';
+@import './components/account/tabs/_personal';
