--- a/src/assets/scss/components/account/tabs/_orders.scss
+++ b/src/assets/scss/components/account/tabs/_orders.scss
@@ -29,10 +29,174 @@
 
         &-item {
             cursor: pointer;
+            transition: all 0.3s ease-in-out;
+
+            &:hover {
+                color: grey;
+            }
+
+            &.active {
+                position: relative;
+    
+                &::after {
+                    position: absolute;
+                    content: '';
+                    width: 100%;
+                    height: 1px;
+                    background-color: $black;
+                    bottom: -0.5rem;
+                    left: 0;
+                }
+            }
         }
     }
 
     &-none {
         text-align: center;
+    }
+
+    &-list {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-wrap: wrap;
+        gap: 4rem;
+    }
+
+    .catalog__card {
+        display: flex;
+        flex-direction: column;
+        cursor: pointer;
+
+        &:hover .splide__arrows {
+            display: block;
+        }
+
+        &:hover .splide {
+            &::after {
+                display: block;
+            }
+        }
+
+        &:hover &-title {
+            text-decoration: underline;
+        }
+
+        &-status {
+            font-family: 'Futura LT Pro Heavy';
+            padding: 0.5rem;
+            text-align: center;
+            border: 1px solid $black;
+        }
+
+
+        &-img {
+            position: relative;
+        }
+
+        &-favorite {
+            position: absolute;
+            top: 1.5rem;
+            right: 1.5rem;
+            width: 1.5rem;
+            height: 1.5rem;
+            cursor: pointer;
+            transition: all 0.3s ease-in-out;
+
+            @media (max-width: $md-breakpoint) {
+                width: 2.5rem;
+                height: 2.5rem;
+            }
+
+            &:hover {
+                color: grey;
+            }
+
+            &.checked {
+                color: red;
+            }
+        }
+
+        &-new {
+            position: absolute;
+            top: 1.5rem;
+            left: 1.5rem;
+            text-transform: uppercase;
+            writing-mode: vertical-lr;
+            transform-origin: center;
+            transform: rotate(-180deg);
+            font-size: 0.8rem;
+            letter-spacing: 0.1rem;
+        }
+
+        &-info {
+            margin: 1rem 0;
+            display: flex;
+            flex-direction: column;
+            gap: 1rem;
+        }
+
+        &-title {
+            transition: all 0.3s ease-in-out;
+        }
+
+        .splide {
+            width: 25rem;
+            height: 32rem;
+            position: relative;
+
+            &::after {
+                position: absolute;
+                display: none;
+                content: '';
+                width: 100%;
+                background-color: $black;
+                height: 1px;
+                bottom: -1px;
+                left: 0;
+                transition: all 0.3s ease-in-out;
+            }
+
+            @media (max-width: 1560px) {
+                width: 20rem;
+                height: 27rem;
+            }
+
+            @media (max-width: $s-breakpoint) {
+                width: 34rem;
+                height: 41rem;
+            }
+
+            &__track {
+                height: 100%;
+            }
+
+            &__arrows {
+                display: none;
+
+                @media (max-width: 1024px) {
+                    display: block;
+                }
+            }
+
+            &__arrow {
+                background: $white;
+                transition: all 0.3s ease-in-out;
+            }
+
+            &__slide {
+                width: 100%;
+                height: 100%;
+    
+                &-img {
+                    position: absolute;
+                    top: 0;
+                    left: 0;
+                    width: 100%;
+                    height: 100%;
+                    object-fit: cover;
+                }
+            }
+        }
     }
 }
