--- a/src/assets/scss/components/account/tabs/_recap.scss
+++ b/src/assets/scss/components/account/tabs/_recap.scss
@@ -2,8 +2,8 @@
     .container {
         display: flex;
         align-items: center;
-        justify-content: center;
         width: 100%;
+        position: relative;
     }
 
     &-info,
@@ -12,7 +12,13 @@
         width: 33.33%;
     }
 
-    &-info {
+    &-info,
+    &-sections {
+        padding: 8rem 0;
+    }
+
+    &-info,
+    &-info-form {
         display: flex;
         flex-direction: column;
         gap: 3rem;
@@ -27,7 +33,7 @@
             height: 100%;
             top: 0;
             right: 20%;
-            background-color: grey;
+            background-color: $grey;
         }
     }
 
@@ -50,7 +56,8 @@
     &-name-first,
     &-name-last,
     &-email-wrapper,
-    &-password-wrapper {
+    &-password-wrapper,
+    &-name-wrapper {
         display: flex;
         flex-direction: column;
         gap: 0.5rem;
@@ -59,10 +66,17 @@
 
     &-name-title,
     &-email-title,
-    &-password-title {
+    &-password-title,
+    &-label {
         text-transform: uppercase;
         font-size: 1rem;
         color: grey;
+    }
+
+    &-input {
+        padding: 0.5rem;
+        border-bottom: 1px solid $black;
+        width: 60%;
     }
 
     &-section {
@@ -99,6 +113,13 @@
         }
     }
 
+    &-img {
+        height: 100%;
+        position: absolute;
+        top: 0;
+        right: 0;
+    }
+
     &-bg {
         width: 100%;
         height: 100%;
@@ -120,5 +141,28 @@
         }
 
         @include button-hover($white, $black);
+    }
+
+    &-btns {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        gap: 2rem;
+        width: fit-content;
+    }
+
+    &-apply,
+    &-cancel {
+        text-transform: uppercase;
+        padding: 0.8rem 2rem;
+        background-color: $black;
+        border: 1px solid $black;
+        color: $white;
+        transition: all 0.3s ease-in-out;
+
+        &:hover {
+            background-color: transparent;
+            color: $black;
+        }
     }
 }
