--- a/src/assets/scss/components/account/_menu.scss
+++ b/src/assets/scss/components/account/_menu.scss
@@ -8,6 +8,11 @@
     top: 0;
     z-index: 10;
 
+    @media (max-width: 1024px) {
+        top: 14rem;
+        border-top: 1px solid $grey;
+    }
+
     .container {
         padding: 3rem 0;
         position: relative;
@@ -18,6 +23,11 @@
         align-items: center;
         justify-content: center;
         gap: 2rem;
+
+        @media (max-width: $s-breakpoint) {
+            justify-content: flex-start;
+            gap: 1rem;
+        }
     }
 
     &-item {
