--- a/src/assets/scss/global.scss
+++ b/src/assets/scss/global.scss
@@ -25,6 +25,10 @@ body {
     &.hidden {
         overflow: hidden;
     }
+
+    @media (max-width: $md-breakpoint) {
+        font-size: 1.4rem;
+    }
 }
 
 h1, h2, h3, h4, h5, h6 {
