--- a/src/assets/scss/partials/_header.scss
+++ b/src/assets/scss/partials/_header.scss
@@ -224,6 +224,20 @@
             transition: width 0.3s ease-out;
 
             @include link-hover;
+
+            &.active {
+                position: relative;
+    
+                &::after {
+                    position: absolute;
+                    content: '';
+                    width: 100%;
+                    height: 2px;
+                    background-color: $black;
+                    bottom: -0.5rem;
+                    left: 0;
+                }
+            }
         }
 
         &-aside {
