--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -17,7 +17,8 @@
 @import './components/product/product-description';
 @import './components/product/product-recommendations';
 @import './components/account/menu';
-@import './components/account/tabs/_recap';
-@import './components/account/tabs/_wishlist';
-@import './components/account/tabs/_orders';
-@import './components/account/tabs/_personal';
+@import './components/account/tabs/recap';
+@import './components/account/tabs/wishlist';
+@import './components/account/tabs/orders';
+@import './components/account/tabs/personal';
+@import './modals/basket-modal';
