add some modals

--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -16,6 +16,8 @@
 @import './components/product/product-params';
 @import './components/product/product-description';
 @import './components/product/product-recommendations';
+@import './components/product/size-modal';
+@import './components/product/color-modal';
 @import './components/account/menu';
 @import './components/account/tabs/recap';
 @import './components/account/tabs/wishlist';
