--- a/src/assets/scss/components/product/_product-params.scss
+++ b/src/assets/scss/components/product/_product-params.scss
@@ -77,6 +77,12 @@
             color: $white;
             transition: all 0.3s ease-in-out;
 
+            &:disabled {
+                background-color: transparent;
+                color: $black;
+                cursor: auto;
+            }
+
             &:hover {
                 background-color: transparent;
                 color: $black;
