feat: add wishlist functionality

--- a/src/assets/scss/components/catalog/_card-list.scss
+++ b/src/assets/scss/components/catalog/_card-list.scss
@@ -71,6 +71,10 @@
 
             &.checked {
                 color: red;
+
+                &:hover {
+                    color: grey;
+                }
             }
         }
 
