--- a/src/assets/scss/components/product/_product-params.scss
+++ b/src/assets/scss/components/product/_product-params.scss
@@ -55,6 +55,10 @@
 
             &.checked {
                 color: red;
+
+                &:hover {
+                    color: grey;
+                }
             }
         }
 
