--- a/src/assets/scss/components/account/tabs/_wishlist.scss
+++ b/src/assets/scss/components/account/tabs/_wishlist.scss
@@ -11,7 +11,7 @@
 
         &::after {
             position: absolute;
-            content: '';
+            content: "";
             width: 100%;
             height: 2px;
             background-color: $black;
@@ -26,6 +26,12 @@
         justify-content: center;
         flex-wrap: wrap;
         gap: 4rem;
+    }
+
+    &-none {
+        width: 80%;
+        margin: 0 auto;
+        text-align: center;
     }
 
     .catalog__card {
@@ -46,7 +52,6 @@
         &:hover &-title {
             text-decoration: underline;
         }
-
 
         &-img {
             position: relative;
@@ -104,7 +109,7 @@
             &::after {
                 position: absolute;
                 display: none;
-                content: '';
+                content: "";
                 width: 100%;
                 background-color: $black;
                 height: 1px;
@@ -143,7 +148,7 @@
             &__slide {
                 width: 100%;
                 height: 100%;
-    
+
                 &-img {
                     position: absolute;
                     top: 0;
